# MobileRAG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dataset/: CMakeLists.txt
dataset/include/: dataset.hpp
dataset/src/: dataset.cpp
demo/: rag_demo.cpp  vectordb_demo.cpp
include/: MNNRAG.hpp  RAG.hpp  RAGEvaluator.hpp  SQLiteVectorDB.hpp  VectorDB.hpp
sim/: README.md  requirements.txt
sim/data/trivia_qa/: process.py
sim/py/: test.py
sim/rag/: rag.py
src/: MNNRAG.cpp  RAG.cpp  RAGEvaluator.cpp  SQLiteVectorDB.cpp  VectorDB.cpp
wrapper/: .gitignore  CMakeLists.txt
wrapper/include/: llm_wrapper.h  mnn_wrapper.h
wrapper/src/: mnn_wrapper.cpp
